Update player fields, adjusted templates, adds db seed

--- a/lib/platform/web/templates/players/show.html.eex
+++ b/lib/platform/web/templates/players/show.html.eex
@@ -3,6 +3,16 @@
 <ul>
 
   <li>
+    <strong>ID:</strong>
+    <%= @players.id %>
+  </li>
+
+  <li>
+    <strong>Display Name:</strong>
+    <%= @players.display_name %>
+  </li>
+
+  <li>
     <strong>Username:</strong>
     <%= @players.username %>
   </li>
