--- a/lib/platform/web/templates/players/edit.html.eex
+++ b/lib/platform/web/templates/players/edit.html.eex
@@ -1,6 +1,28 @@
 <h2>Edit Players</h2>
 
-<%= render "form.html", changeset: @changeset,
-                        action: players_path(@conn, :update, @players) %>
+<%= form_for @changeset, players_path(@conn, :update, @players), fn f -> %>
 
-<span><%= link "Back", to: players_path(@conn, :index) %></span>
+  <%= if @changeset.action do %>
+  <div class="alert alert-danger">
+    <p>Oops, something went wrong! Please check the errors below.</p>
+  </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= label f, :display_name, "Player Name", class: "control-label" %>
+    <%= text_input f, :display_name, placeholder: "Enter Display Name...", class: "form-control" %>
+    <%= error_tag f, :display_name %>
+  </div>
+
+
+  <div class="form-group">
+    <%= label f, :username, "Player Username", class: "control-label" %>
+    <%= text_input f, :username, placeholder: "Enter username...", class: "form-control" %>
+    <%= error_tag f, :username %>
+  </div>
+
+  <div class="form-group">
+    <%= submit "Submit", class: "btn btn-primary" %>
+    <span><%= link "Back", to: players_path(@conn, :index), class: "btn btn-default" %></span>
+  </div>
+<% end %>
