--- a/lib/platform/web/templates/players/new.html.eex
+++ b/lib/platform/web/templates/players/new.html.eex
@@ -1,6 +1,26 @@
-<h2>New Players</h2>
+<h2>Player Sign Up Page</h2>
+<%= form_for @changeset, players_path(@conn, :create), fn f -> %>
 
-<%= render "form.html", changeset: @changeset,
-                        action: players_path(@conn, :create) %>
+  <%= if @changeset.action do %>
+  <div class="alert alert-danger">
+    <p>Oops, something went wrong! Please check the errors below.</p>
+  </div>
+  <% end %>
 
-<span><%= link "Back", to: players_path(@conn, :index) %></span>
+  <div class="form-group">
+    <%= label f, :username, "Player Username", class: "control-label" %>
+    <%= text_input f, :username, placeholder: "Enter username...", class: "form-control" %>
+    <%= error_tag f, :username %>
+  </div>
+
+  <div class="form-group">
+    <%= label f, :password, "Player Password", class: "control-label" %>
+    <%= password_input f, :password, placeholder: "Enter password...", class: "form-control" %>
+    <%= error_tag f, :password %>
+  </div>
+
+  <div class="form-group">
+    <%= submit "Submit", class: "btn btn-primary" %>
+    <span><%= link "Back", to: players_path(@conn, :index), class: "btn btn-default" %></span>
+  </div>
+<% end %>
