--- a/lib/platform/web/templates/page/index.html.eex
+++ b/lib/platform/web/templates/page/index.html.eex
@@ -1,2 +1,3 @@
-<%= link("Create New Player", to: "/players/new", class: "btn btn-success") %>
-<%= link("List All Players", to: "/players", class: "btn btn-info") %>
+<p class="well">Signed in as <strong><%= @current_user.username %></strong></p>
+<span><%= link "List All Players", to: players_path(@conn, :index), class: "btn btn-info" %></span>
+<span><%= link "Sign Out", to: players_session_path(@conn, :delete, @current_user), method: "delete", class: "btn btn-danger" %></span>
